--- a/hw/HW1/hw1.tex
+++ b/hw/HW1/hw1.tex
@@ -84,7 +84,7 @@
 
 \date{Due February 10, 2025}
 \author{\begin{fillme}[width=0.3\textwidth]
- Your name here.
+Yuzhou Zhao
 \end{fillme}} % Fill in your name!
 
 \title{ECE433/COS435 Introduction to RL\\
@@ -124,7 +124,69 @@ P^{(n)} = \begin{bmatrix}
 \end{bmatrix}.
 \]
 \begin{solution}
-Your solution here...
+Statement:
+\[
+P^{(n)} = \begin{bmatrix}
+\frac{1}{2} + \frac{1}{2}(2p - 1)^n & \frac{1}{2} - \frac{1}{2}(2p - 1)^n \\
+\frac{1}{2} - \frac{1}{2}(2p - 1)^n & \frac{1}{2} + \frac{1}{2}(2p - 1)^n
+\end{bmatrix}.
+\]
+% Base case $n=0$:
+% \begin{align}
+% P^0 = & \begin{bmatrix}
+% \frac{1}{2} + \frac{1}{2}(2p - 1)^0 & \frac{1}{2} - \frac{1}{2}(2p - 1)^0 \\
+% \frac{1}{2} - \frac{1}{2}(2p - 1)^0 & \frac{1}{2} + \frac{1}{2}(2p - 1)^0
+% \end{bmatrix}. \\
+% = & \begin{bmatrix}
+% 1 & 0 \\
+% 0 & 1 
+% \end{bmatrix}.
+% \end{align}
+Base case $n=1$:
+\begin{align}
+P^1 = & \begin{bmatrix}
+\frac{1}{2} + \frac{1}{2}(2p - 1) & \frac{1}{2} - \frac{1}{2}(2p - 1) \\
+\frac{1}{2} - \frac{1}{2}(2p - 1) & \frac{1}{2} + \frac{1}{2}(2p - 1)
+\end{bmatrix}. \\
+= & \begin{bmatrix}
+p & 1 - p \\
+1 - p & p 
+\end{bmatrix}.
+\end{align}
+Induction step: 
+\begin{align}
+P^{(n+1)} = & P^{(n)}P\\
+= & \begin{bmatrix}
+\frac{1}{2} + \frac{1}{2}(2p - 1)^{n} & \frac{1}{2} - \frac{1}{2}(2p - 1)^{n} \\
+\frac{1}{2} - \frac{1}{2}(2p - 1)^{n} & \frac{1}{2} + \frac{1}{2}(2p - 1)^{n}
+\end{bmatrix} \cdot \begin{bmatrix}
+p & 1 - p \\
+1 - p & p 
+\end{bmatrix} \\
+= & \begin{bmatrix}
+A & B \\
+B & A 
+\end{bmatrix}
+\end{align}
+Where
+\begin{align}
+    A = & p(\frac{1}{2} + \frac{1}{2}(2p - 1)^{n}) + (1-p)(\frac{1}{2} - \frac{1}{2}(2p - 1)^{n})\\
+      = & \frac{1}{2}p + \frac{1}{2}p(2p - 1)^{n} + \frac{1}{2}(1-p) - \frac{1}{2}(1-p)(2p - 1)^{n} \\
+      = & \frac{1}{2} + \frac{1}{2}(p - (1-p))(2p - 1)^{n}\\
+      = & \frac{1}{2} + \frac{1}{2}(2p - 1)^{n+1} \\
+    B = & (1-p)(\frac{1}{2} + \frac{1}{2}(2p - 1)^{n}) + p(\frac{1}{2} - \frac{1}{2}(2p - 1)^{n})\\
+      = & \frac{1}{2}(1-p) + \frac{1}{2}(1-p)(2p - 1)^{n} + \frac{1}{2}p - \frac{1}{2}p(2p - 1)^{n} \\
+      = & \frac{1}{2} + \frac{1}{2}((1-p)-p)(2p - 1)^{n}\\
+      = & \frac{1}{2} - \frac{1}{2}(2p - 1)^{n+1} 
+\end{align}
+Thus, statement is true:
+\begin{align}
+P^{(n+1)} = & \begin{bmatrix}
+\frac{1}{2} + \frac{1}{2}(2p - 1)^{n+1} & \frac{1}{2} - \frac{1}{2}(2p - 1)^{n+1} \\
+\frac{1}{2} - \frac{1}{2}(2p - 1)^{n+1} & \frac{1}{2} + \frac{1}{2}(2p - 1)^{n+1}
+\end{bmatrix}.
+\end{align}
+
 \end{solution}
 
 \subsection*{Question 1.b (10 Points)} Expectation of State Occupancy.
@@ -135,7 +197,38 @@ Your solution here...
 $n$ approaches infinity.
     \end{itemize}
 \begin{solution}
-Your solution here...
+Let $I(\cdot)$ be the indicator function of an event, e.g., $I(s(n)=s_1) = 1$ if the state at $n$ step is $s_1$, and $I(s(n)=s_1) = 0$ otherwise. \\
+Since we start from $s_1$, $P^{0}_{11} = 1 = \frac{1}{2} + \frac{1}{2}(2p - 1)^{0}$, and $P^{0}_{12} = 0 = \frac{1}{2} - \frac{1}{2}(2p - 1)^{0}$.
+The expected number of times the process is in $s_1$ after $n$ transition is:
+\begin{align}
+    \mathbb{E}[\sum_{i=0}^{n}I(s(i)=s_1)] 
+    = & \sum_{i=0}^{n} P^{(i)}_{11} \\
+    = & \sum_{i=0}^{n} \frac{1}{2} + \frac{1}{2}(2p - 1)^{i} \\
+    = & \frac{1}{2}\left(n + 1 + \sum_{i=0}^{n}(2p - 1)^{i}\right).
+\end{align}
+Similarly, the expected number of times the process is in $s_2$ after $n$ transition is:
+\begin{align}
+    \mathbb{E}[\sum_{i=0}^{n}I(s(i)=s_2)] 
+    = & \sum_{i=0}^{n} P^{(i)}_{12} \\
+    = & \sum_{i=0}^{n} \frac{1}{2} - \frac{1}{2}(2p - 1)^{i} \\
+    = & \frac{1}{2}\left(n + 1 - \sum_{i=0}^{n}(2p - 1)^{i}\right).
+\end{align}
+For $p\neq 0$, when $n$ approaches infinity:
+\begin{align}
+    \lim_{n\rightarrow \infty}\mathbb{E}[\sum_{i=0}^{n}I(s(i)=s_1)] 
+    = & \lim_{n\rightarrow \infty} \left[ \frac{1}{2}\left(n + 1 + \sum_{i=0}^{n}(2p - 1)^{i}\right) \right] \\
+    = & \frac{1}{2}\left(\lim_{n\rightarrow \infty}(n + 1) + \sum_{i=0}^{\infty}(2p - 1)^{i}\right) \\
+    = & \frac{1}{2}\left(\lim_{n\rightarrow \infty}(n + 1) + \frac{1}{1-(2p-1)}\right) \\
+    = & \lim_{n\rightarrow \infty}\frac{n+1}{2} + \frac{1}{4(1-p)}.
+\end{align}
+Similarly, 
+\begin{align}
+    \lim_{n\rightarrow \infty}\mathbb{E}[\sum_{i=0}^{n}I(s(i)=s_2)] 
+    = & \lim_{n\rightarrow \infty} \left[ \frac{1}{2}\left(n + 1 - \sum_{i=0}^{n}(2p - 1)^{i}\right) \right] \\
+    = & \frac{1}{2}\left(\lim_{n\rightarrow \infty}(n + 1) - \sum_{i=0}^{\infty}(2p - 1)^{i}\right) \\
+    = & \frac{1}{2}\left(\lim_{n\rightarrow \infty}(n + 1) - \frac{1}{1-(2p-1)}\right) \\
+    = & \lim_{n\rightarrow \infty}\frac{n+1}{2} - \frac{1}{4(1-p)}.
+\end{align}
 \end{solution}
 
 \subsection*{Question 1.c (5 Points)} Probability of First Visit.
@@ -144,7 +237,16 @@ Your solution here...
 $k$-th transition, given it starts in $s_1$. What happens if $k \to \infty$?
     \end{itemize}
 \begin{solution}
-Your solution here...
+The probability that the process stays on $s_1$ for the first $k-1$ steps is $p^{k-1}$. Then the probability that transition from $s_1$ to $s_2$ is $(1-p)$. Thus,
+\begin{align}
+    P(\text{visits $s_2$ for the 1-st time on the 
+$k$-th transition}) = (1-p)p^{k-1}.
+\end{align}
+Since $0 \leq p \leq 1$, 
+\begin{align}
+    \lim_{k\rightarrow \infty}(1-p)p^{k-1} \approx 0.
+\end{align}
+It is nearly impossible to visit $s_2$ for the first time on the $k-th$ transition as $k \rightarrow \infty$.
 \end{solution}
 
 \subsection*{Question 1.d (5 Points)} Conditional Expectations.
@@ -152,7 +254,13 @@ Your solution here...
         \item Given that the chain is in $s_2$ at the $n$-th step, compute the conditional expectation of the number of visits to $s_1$ in the next $m$ steps.
     \end{itemize}
 \begin{solution}
-Your solution here...
+\begin{align}
+    \mathbb{E}[\sum_{i = 1}^{m}I(s(n+i)=s_1 | s(n)=s_2)] 
+    = & \sum_{i = 1}^{m}P(s(n+i) = s_1 | s(n)=s_2)\\
+    = & \sum_{i = 1}^{m}P^i_{21} \\
+    = & \sum_{i = 1}^{m}(\frac{1}{2} - \frac{1}{2}(2p - 1)^i) \\
+    = & \frac{1}{2}\left(m - \sum_{i = 1}^{m}\frac{1}{2}(2p - 1)^i \right)
+\end{align}
 \end{solution}
 
 \subsection*{Question 1.e (5 Points)} Expected rewards. When transitioning from one state to another, assume we receive a reward of $1$ for reaching $s_2$ and $-1$ for reaching $s_1$.
@@ -162,7 +270,14 @@ $n$ transitions (i.e., the summation of rewards), starting from $s_1$.
 \end{itemize}
 
 \begin{solution}
-Your solution here...
+Knowing that $r(s_2) = 1$, $r(s_1) = -1$,
+\begin{align}
+    \mathbb{E}[r(s)] 
+    = & r(s_2)\cdot\mathbb{E}[\sum_{i=0}^{n}I(s(i)=s_2)] + r(s_1)\cdot \mathbb{E}[\sum_{i=0}^{n}I(s(i)=s_1)]\\
+    = & \mathbb{E}[\sum_{i=0}^{n}I(s(i)=s_2)] - \mathbb{E}[\sum_{i=0}^{n}I(s(i)=s_1)]\\
+    = & \frac{1}{2}\left(n + 1 - \sum_{i=0}^{n}(2p - 1)^{i}\right) - \frac{1}{2}\left(n + 1 + \sum_{i=0}^{n}(2p - 1)^{i}\right) \\
+    = & - \sum_{i=0}^{n}(2p - 1)^{i}.
+\end{align}
 \end{solution}
 
 
@@ -182,12 +297,16 @@ The agent receives a reward of -1 for each action until it reaches the goal stat
 \subsection*{Question 2.a (5 Points)}
 Formulate the problem as a Markov Decision Process (MDP). Define the states, actions, transition probabilities (assume deterministic transitions), rewards, and policy.
 \begin{solution}
-Your solution here...
+State: Grid coordinate at step i: $s(i)=(i, j)$.\\
+Actions: Move up, down, left, right at step i: $a(i) = {(-1, 0), (1,0), (0, -1), (0,1)}$ respectively. \\
+Transitions: According to a moving action, the agent is moved by $a(i)$ from $s(i)$ to $s(i+1)$. Note that if the agent is moving into a wall, it stays at the current state (i.e., $s(i)=s(i+1)$).\\
+Rewards: The agent receives a reward of -1 for each action $a(i)$ until it reaches the goal state $s(i+1) = (3,3)$.\\
+Policy: The policy can be a deterministic chain of actions of moving directions.
 \end{solution}
 
 \subsection*{Question 2.b (5 Points)} How many unique (deterministic) policies are there in total?
 \begin{solution}
-Your solution here...
+To move from start state to the goal state, at each node we can take 4 actions. There are total of 16 nodes, and 1 is the goal node. Thus the total number of deterministic policies is $4^{15}$. Some of them may never reach the goal.
 \end{solution}
 
 \section*{Question 3. Bandits vs MDPs (10 Points)}
@@ -199,7 +318,8 @@ Your solution here...
                 \end{enumerate}
 
 \begin{solution}
-    Your solution here...
+    A general RL problem. \\
+    For each patient visit, the medication of the doctor will change the future state of the patient, which makes it a general RL problem that each action will affect the environment (i.e., patient’s health state). At each patient visit, the doctor not only should consider the patient's health state, but should also consider the progress of the patient's health state over the entire treatment plan. Thus the doctor's action should not only consider short-term rewards, but also long-term rewards. This means that this scenario best fits with a general RL problem.
 \end{solution}
 
 \section*{Question 4. Coding (50 points) }
